2000-05-02  NotZed  <NotZed@HelixCode.com>

	* e-sexp.c (e_sexp_finalise): Free the parse tree if we have one.
	(e_sexp_parse): If we already have a parse tree, free it.

2000-05-02  Matt Loper  <matt@helixcode.com>

	* Makefile.am: set G_LOG_DOMAIN.

2000-05-01  Ettore Perazzoli  <ettore@helixcode.com>

	* e-xml-utils.c, e-xml-utils.h: Constified all the functions.

2000-04-27  Dan Winship  <danw@helixcode.com>

	* e-html-utils.c (e_text_to_html): Moved here from the mailer,
	since it's of general use, and the composer needs it too.

2000-04-24  Miguel de Icaza  <miguel@helixcode.com>

	* e-popup-menu.c: New file.  Implements easy to use popup menus. 

2000-04-24  Matt Loper  <matt@helixcode.com>

	* e-paned.c: New file. Makes a GtkPaned with more than two
	children.
	* e-paned.h: same.

	* Makefile.am: added e-paned.[ch].

2000-04-19  Christopher James Lahey  <clahey@helixcode.com>

	* e-xml-utils.c, e-xml-utils.h: Added
	e_xml_get_child_by_name_by_lang.

2000-04-16  Anders Carlsson  <andersca@gnu.org>

      * e-canvas.c (e_canvas_class_init): Add realize.
      (e_canvas_realize): Set the back pixmap to NULL to reduce flicker.

2000-04-14  Christopher James Lahey  <clahey@helixcode.com>

	* e-xml-utils.c: Fixing a warning.

2000-04-14  Christopher James Lahey  <clahey@helixcode.com>

	* e-xml-utils.c: Add g_return_if_fails.

2000-04-12  Miguel de Icaza  <miguel@gnu.org>

	* e-cursors.c (e_cursor_get): Prevent next hacker to get bitten by this.

2000-04-10  Christopher James Lahey  <clahey@helixcode.com>

	* e-canvas.c: Added proper keyboard focus handling.

2000-04-06  Matt Loper  <matt@helixcode.com>

	* e-setup.c (e_setup_base_dir): Get/set Evolution's base directory
	via gnome-config.
	(mkdir_if_necessary): New function.
	(e_setup_base_dir): Use mkdir_if_necessary().

2000-03-22  NotZed  <NotZed@HelixCode.com>

	* e-util/e-sexp.h: Formatting cleanup.

2000-03-07  NotZed  <NotZed@HelixCode.com>
